# brainlayer

./: .claude-project-id  .claude.local.md.example  .gitattributes  .gitignore  .mcp.json.example  404.html  AGENTS.md  BUGBOT_ACTION_ITEMS.md  BUGBOT_CODERABBIT_ANALYSIS.md  BUGBOT_COMMENT.md  BUGBOT_COMMENT_PR265.md  BUGBOT_CRITICAL_ISSUES.md  BUGBOT_FINAL_STATUS.md  BUGBOT_FINAL_SUMMARY.md  BUGBOT_PR_COMMENT_HELPER_FAST_PROFILE.md  BUGBOT_REREVIEW_P2_KG_CLEANUP.md  BUGBOT_REVIEW.md  BUGBOT_REVIEW_352.md  BUGBOT_REVIEW_388.md  BUGBOT_REVIEW_388_ACTION_ITEMS.md  BUGBOT_REVIEW_BRAINBAR_HELPER_FAST_PROFILE.md  BUGBOT_REVIEW_DASHBOARD_PERF.md  BUGBOT_REVIEW_DEFLAKE_AGENT_PROFILES.md  BUGBOT_REVIEW_DETAILED.md  BUGBOT_REVIEW_FINDINGS.md  BUGBOT_REVIEW_FIX_PYTHON_CI.md  BUGBOT_REVIEW_FTS_RECALL.md  BUGBOT_REVIEW_HOOKS_FAIL_LOUD.md  BUGBOT_REVIEW_P2_CROSSTYPE.md  BUGBOT_REVIEW_P2_KG_CLEANUP.md  BUGBOT_REVIEW_P6B.md  BUGBOT_REVIEW_PR265_BRAINBAR_GUARDS.md  BUGBOT_REVIEW_QUICK_CAPTURE.md  BUGBOT_REVIEW_QUICK_CAPTURE_UX_FIX.md  BUGBOT_REVIEW_RESTORE_CAPTURE_ACTIONS.md  BUGBOT_REVIEW_STABILITY_SWEEP.md  BUGBOT_REVIEW_SUMMARY.md  BUGBOT_REVIEW_SUMMARY_RESTORE_CAPTURE.md  BUGBOT_REVIEW_SUMMARY_STABILITY_SWEEP.md  BUGBOT_REVIEW_VECTOR_STORE_DEFER.md  (+33 more)
.claude-plugin/: marketplace.json
.claude/commands/: 1password  brainlayer  code-review  ecosystem-health  large-plan  worktrees
.githooks/: pre-push
.github/workflows/: brainbar-release.yml  ci.yml  docs.yml
.kiro/: context.md
.kiro/agents/: zikaron_builder.json  zikaron_researcher.json
.kiro/specs/: zikaron-dashboard.md  zikaron-performance.md
abcde-experiment-isolation/: index.html
adr/0000-template/: index.html
adr/0001-sqlite-vec-over-dedicated-vector-db/: index.html
adr/0002-reciprocal-rank-fusion-for-hybrid-search/: index.html
arbitration/: index.html
architecture/: index.html
archive/: chat-tags-example.yaml
backup-strategy/: index.html
brain-bar/: Package.resolved  Package.swift  build-app.sh
brew-layer-conformance/: index.html
collab/: 2026-06-25-brainlayer-worker-status.md
configuration/: index.html
contracts/: engine-ui-contract.md  entity-types.yaml
contributing/: index.html
data-locations/: index.html
docs/: abcde-experiment-isolation.md  arbitration.md  architecture.md  backup-strategy.md  brew-layer-conformance.md  chat-based-analysis-design.md  chat-tags-example.yaml  communication-analysis.md  configuration.md  contributing.md  data-locations.md  embedding-setup.md  enrichment-provider-agnostic-design.md  enrichment-runbook.md  enrichment.md  hierarchical-clustering-deep-research.md  hierarchical-clustering-research.txt  index.md  kg-spec.md  local-models-guide.md  mcp-config.md  mcp-tools.md  orqi-batch-contract.md  quickstart.md  research-chat-based-analysis.md  research-prompt-embeddings.md  roadmap.md  showcase-claude-collab-discovery.md
embedding-setup/: index.html
enrichment/: index.html
enrichment-provider-agnostic-design/: index.html
enrichment-runbook/: index.html
eval_results/: abcde_enrich.jsonl  abcde_results_summary.md  db-shrink-2026-06-01.json  kg-phase1-dryrun-2026-06-05.json  kg-phase1-flag-batch-2026-06-05.json
hooks/: brainbar-postcompact.py  brainbar-prompt-capture.py  brainbar-stop-index.py  brainlayer-prompt-search.py  brainlayer-session-start.py  dedup_coordination.py  post-commit.py  session-cleanup.py
kg-spec/: index.html
landing/: index.html
launchd/: com.brainlayer.jsonl-backup.plist  com.brainlayer.watch.plist  install-newsyslog.sh
local-models-guide/: index.html
mcp-config/: index.html
mcp-tools/: index.html
migrations/: 002_decay_columns.sql  003_raw_entities_json.sql  004_enrich_status.sql
orqi-batch-contract/: index.html
overrides/: main.html
prd-json/: AGENTS.md  index.json
quickstart/: index.html
results/: abcde_n893_summary.json  abcde_n893_summary.md
roadmap/: index.html
scripts/: .kg_rebuild_progress.json  abcde_report.py  backfill-context.py  backfill-created-at.py  backfill-metadata.py  backfill_chunk_origin_provenance.py  backfill_content_class.py  backfill_decay.py  backfill_dedupe.py  backfill_kg_promotion.py  backfill_orchestrate.sh  batch_submit_paced.py  brainlayer-dedupe-brainbar.sh  brainlayer-update-brainbar.sh  brainlayer-version-check.sh  braintrust_ingest.py  build_qrels.py  calibrate_importance.py  classify-all.py  cleanup-profanity-chunks.py  cloud_backfill.py  cloud_stream.py  com.zikaron.watcher.plist  consolidate_projects.py  db_shrink_eval.py  db_shrink_migrate.py  dedup_entities.py  diarize_episodes.py  drain_daemon.py  enrich_recent.py  enrichment_backfill.py  enrichment_llm_judge.py  enrichment_pilot.py  enrichment_quality_benchmark.py  export_lexical_defense_snapshot.py  generate-fixtures.sh  generate-prd.py  generate_abcde_variants.py  generate_style_card.py  hot_currentness_benchmark.py  (+53 more)
search/: search_index.json
showcase-claude-collab-discovery/: index.html
site/: package-lock.json  package.json  vercel.json
site/app/: page.tsx  (+4 more)
stylesheets/: extra.css
tests/: BrainBarWindowRootView.test.swift  __init__.py  conftest.py  eval_baselines.json  eval_mcp_brainlayer.json  eval_pr3_relevance_qrels.json  eval_qrels.json  stale_index_query.test.ts  test_3tool_aliases.py  test_6pm_entity_upgrades.py  test_abcde_enrich_runner.py  test_abcde_report.py  test_abcde_variants.py  test_adaptive_injection.py  test_agent_ingest_launchd.py  test_agent_profiles.py  test_agent_session_watcher.py  test_alarm.py  test_arbitration.py  test_atomic_brick_schema.py  test_audit_recursion_filter.py  test_audit_search_quality.py  test_auto_enrich.py  test_backup_daily.py  test_batch_extraction.py  test_batch_reenrichment_setup.py  test_behavioral_pr_loop.py  test_bitemporal_phase1.py  test_brain_graph_compat.py  test_brain_tags.py  test_brainbar_build_app_guards.py  test_brainbar_helper_fast_profile.py  test_brainbar_hybrid_helper.py  test_brainbar_release_workflow.py  test_brainbar_update_script.py  test_brainstore.py  test_braintrust_ingest.py  test_calibrate_importance.py  test_chat_list.py  test_chunk.py  (+195 more)
(+675 files in other folders)
