[project]
name = "zikaron"
version = "0.1.0"
description = "Local knowledge pipeline for Claude Code conversations - זיכרון (memory)"
requires-python = ">=3.11"
dependencies = [
    # Vector DB (pinned <0.5.0 to avoid unstable Rust backend crashes)
    "chromadb>=0.4.0,<0.5.0",

    # NumPy (pinned <2.0 for chromadb 0.4.x compatibility)
    "numpy>=1.22,<3.0",

    # Posthog (pinned <4.0 to fix chromadb 0.4.x telemetry errors)
    "posthog>=2.0,<4.0",

    # Embeddings (local via Ollama)
    "ollama>=0.1.0",

    # AST parsing for code chunking (optional - has fallback)
    "tree-sitter>=0.21.0",

    # MCP server
    "mcp>=1.0.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",

    # Utils
    "pydantic>=2.0.0",
    "orjson>=3.9.0",  # Fast JSON for JSONL parsing
    "pyyaml>=6.0",  # Chat-tags config
    "scikit-learn>=1.0.0",  # K-means for cluster-based sampling
    "sentence-transformers>=2.2.0",  # StyleDistance, mStyleDistance (style embeddings)
]

[project.optional-dependencies]
ast = [
    "tree-sitter-languages>=1.9.0",  # Better code chunking (falls back to line-based if unavailable)
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
zikaron = "zikaron.cli:app"
zikaron-mcp = "zikaron.mcp:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
