[project]
name = "brainlayer"
version = "1.0.0"
description = "Like git for your AI conversations"
license = "Apache-2.0"
readme = "README.md"
authors = [{name = "BrainLayer Contributors"}]
keywords = ["ai", "memory", "mcp", "claude", "knowledge-graph", "embeddings", "sqlite-vec"]
requires-python = ">=3.11"
dependencies = [
    # Vector DB (sqlite-vec via APSW)
    "apsw>=3.45.0",
    "sqlite-vec>=0.1.3",  # CVE-2024-46488 fixed in 0.1.3

    # Embeddings (local bge-large-en-v1.5)
    "sentence-transformers>=2.2.0",

    # Daemon (FastAPI + Unix socket)
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",

    # AST parsing for code chunking (optional - has fallback)
    "tree-sitter>=0.21.0",

    # MCP server
    "mcp>=1.0.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",

    # Utils
    "pydantic>=2.0.0",
    "orjson>=3.9.0",  # Fast JSON for JSONL parsing
    "pyyaml>=6.0",  # Chat-tags config
    "numpy>=1.22,<3.0",  # For sentence-transformers
    "scikit-learn>=1.0.0",  # K-means for cluster-based sampling
    "spacy>=3.7,<4.0",  # NER for PII sanitization (en_core_web_sm model)
    "requests>=2.28.0",  # HTTP calls to Ollama for enrichment
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
cloud = [
    "google-genai>=1.0.0",  # Gemini Batch API for cloud backfill (new SDK)
]
brain = [
    "igraph>=0.11.0",  # Graph operations + Leiden via leidenalg
    "leidenalg>=0.10.0",  # Leiden community detection (replaces graspologic)
    "umap-learn>=0.5.0",  # UMAP 3D layout
]
ast = [
    "tree-sitter-languages>=1.9.0",  # Better code chunking (falls back to line-based if unavailable)
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/brainlayer/brainlayer"
Repository = "https://github.com/brainlayer/brainlayer"
Issues = "https://github.com/brainlayer/brainlayer/issues"

[project.scripts]
brainlayer = "brainlayer.cli:app"
brainlayer-mcp = "brainlayer.mcp:serve"
brainlayer-daemon = "brainlayer.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "1.0.0"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
